--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,14 @@ $clr-sign: #cb530e;
   }
 }
 
+button {
+  background: transparent;
+  border-color: transparent;
+  color: #333;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
 p {
   margin: 0;
   line-height: 1.5;
@@ -40,6 +48,7 @@ h1 {
   margin: 2rem 0rem 12rem;
 
   &-item {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -97,10 +106,6 @@ h1 {
   }
 }
 
-// .arrow {
-//   // display: inline-block;
-//   position: absolute;
-// }
 .arrow1 {
   position: absolute;
   right: -10px;
@@ -128,4 +133,43 @@ h1 {
   left: -10px;
   border-bottom: 30px solid $clr-sign;
   border-left: 10px solid transparent;
+}
+
+// modal
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: grid;
+  place-items: center;
+  transition: all 0.3s linear;
+  visibility: hidden;
+  z-index: -1;
+
+  &-open {
+    visibility: visible;
+    z-index: 10;
+  }
+
+  &-container {
+    background: white;
+    border-radius: 1rem;
+    width: 90vw;
+    height: 30vh;
+    max-width: 900px;
+    text-align: center;
+    display: grid;
+    place-items: center;
+    position: relative;
+  }
+
+  &-close-btn {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 2rem;
+  }
 }
